# Graphics_Project-

./: CMakeLists.txt  README.md  main.cpp
src/painter/: BersenhamLine.cpp  BersenhamLine.h  Painter.cpp  Painter.h
src/shapes/: circles.cpp  circles.h  lines.cpp  lines.h
