cmake_minimum_required(VERSION 3.28.1)
project(Graphlics_project)

set(CMAKE_CXX_STANDARD 20)

add_executable(Graphlics_project main.cpp
        src/painter/Painter.cpp
        src/painter/Painter.h
        src/shapes/circles.cpp
        src/shapes/circles.h
        src/shapes/lines.cpp
        src/painter/BersenhamLine.cpp
        src/painter/BersenhamLine.cpp
        src/painter/Painter.h
        src/painter/Painter.h
        src/painter/Painter.h
        src/painter/Painter.h
        src/painter/Painter.h
)
